--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top" style="text-shadow: 2px 2px 8px #909090">Vu Truong</a>
+                <img class="img-circle img-responsive" src="img/Me.jpg" width="40" height="40" alt="">
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -97,7 +98,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About Me</h2>
-                    <h3 class="section-subheading text-muted">The Journey Begin</h3>
+                    <h3 class="section-subheading text-muted">The Journey Begins</h3>
                 </div>
             </div>
             <div class="row">
@@ -409,7 +410,7 @@
 
             <div class="row">
                 <div class="col-lg-12 text-center">
-                  <p> <align="middle" style="color:white;"> <b><i>Phone Number:</i></b> (858)-380-6513</p>
+                  <p> <align="middle" style="color:white;"> <b><i>Phone Number:</i></b> (858)380-6513</p>
                   <p> <align="middle" style="color:white;"> <b><i>Email Address:</i></b>
                     <a href="mailto:vutruong0330@gmail.com">vutruong0330@gmail.com</a>
                   </p>
@@ -511,7 +512,7 @@
                                     and low-pass filter.
                                 </p>
                                 <p align="left">
-                                    <strong>How the our car work:</strong> The car turn left, right and go straight will be based on the voltage from reflected light. The allogrithm was if the input voltage of the left is higher than both straight and right, the car need to turn right
+                                    <strong>How does our car work:</strong> The car turn left, right and go straight will be based on the voltage from reflected light. The allogrithm was if the input voltage of the left is higher than both straight and right, the car need to turn right
                                     in order to not go out of track. If the voltage at the middle is higher than left or right, the car should go straight.
                                 </p>
                                 <br>
@@ -649,7 +650,13 @@
                               </a>
                             </p>
 
-                            <p align ="left"> Explain through the process by words + pics of the final prototype. </p>
+                            <p align = "middle"><strong>OR</strong></p>
+
+                            <p><strong>Click to see the final demo of the app</strong>
+                              <a target="_blank" href="https://www.youtube.com/watch?v=OSnxk7kboAw&feature=youtu.be" class="btn btn-info btn-lg">
+                                  <span class="glyphicon glyphicon-globe"></span> Demo Video
+                              </a>
+                            </p>
 
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
