Changed in timeline and Resume

--- a/index.html
+++ b/index.html
@@ -148,6 +148,20 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/Playmotion.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>November - Feburary 2015</h4>
+                                    <h4 class="subheading">Game Designer Internship</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Working at PlayMotion which is a start up company as game designer</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
                                 <h4>The Future
                                     <br>Lies
                                     <br>Ahead
@@ -186,7 +200,8 @@
                     </span>
                     <h4 class="service-heading">Skills</h4>
                     <p class="text-muted" align="left">Software: C, Java, Swift, Assembly, Verilog.
-                    <br> Hardware: Filters.</p>
+                    <br> Hardware: Fundamental Circuit Design.
+                    <br> &emsp; &emsp; &emsp; &emsp;        Fundamental Filters.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -195,7 +210,7 @@
                     </span>
                     <h4 class="service-heading" style="color:black;">Resume</h4>
                     <p> Click below to download </p>
-                    <a href="https://drive.google.com/uc?export=download&id=0B6FKPIUD4VKXOTdRbjFpb1Q1dWs" download> My Resume</a>
+                    <a href="https://drive.google.com/uc?export=download&id=0B6FKPIUD4VKXNzMtOEZrOXpYUUk" download> My Resume</a>
                 </div>
             </div>
         </div>
